Fix width of utility panel so horizontal scroll bar doesn't show up. Corrected width of ui-select-wrapper in utility panel.

--- a/app/NovaWeb/src/styles/partials/utility-panel/_properties.scss
+++ b/app/NovaWeb/src/styles/partials/utility-panel/_properties.scss
@@ -84,6 +84,14 @@ bp-properties-panel {
                 width: $property-input-width;
             }
 
+            &.formly-field-bpFieldSelectMulti,
+            &.formly-field-bpFieldUserPicker {
+                .ui-select-wrapper {
+                    max-width: $property-input-width;
+                    width: $property-input-width;
+                }
+            }
+
             .ui-select-single {
                 .ui-select-toggle {
                     max-width: $property-input-width;
